<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:paddingTop="20dp"
                android:paddingBottom="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/registroUsuariosLabel"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/firstName"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/nombreET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/lastName"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/apellidoET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/DNI"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/dnidET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/email"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/mobile"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/tel"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/telefonoET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/gender"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/generoET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/localizacion"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/localizacionET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/lastName"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginStart="30dp"
                android:text="@string/password"
                android:layout_marginTop="5dp"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <RadioGroup
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                >
                <RadioButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/admin"
                    android:layout_gravity="center"/>
                <RadioButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/superuser"
                    android:layout_gravity="center"/>
                <RadioButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/user"
                    android:layout_gravity="center"/>
            </RadioGroup>

            <Button
                android:id="@+id/registrarBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="#000000"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/registrar"
                android:textColor="#FFFF" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


