<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:paddingTop="20dp"
                android:paddingBottom="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/verEstudiantesLbl"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginStart="30dp"
        android:text="@string/listaEstudiantes"
        android:layout_marginTop="5dp"
        android:textAppearance="@android:style/TextAppearance.Material.Headline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_marginStart="30dp"
        android:text="@string/asq3TestLbl"
        android:layout_marginTop="5dp"
        android:textAppearance="@android:style/TextAppearance.Material.Headline" />
</LinearLayout>




        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


